--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <html>
 <head>
-	<title>Giphy API || James Ngo</title>
-	<!--Style Sheet  -->
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
-	<!--Google Fonts  -->
-    <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">
-	<!-- Jquery-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<!-- BootStrap 	 -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<title>Giphy API || Marie Dagan</title>
+  <!-- Reset CSS -->
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Link to CSS -->
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <!-- Link to Google Font -->
+<link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 
 <body>
 
 <div class="container">
     <div class="jumbotron">
-        <h1>Star Wars Characters Search</h1>
+        <h1>Harry Potter Giphy Search</h1>
     </div>
 
     <div class="row">
@@ -25,7 +30,7 @@
     <div class="row">
         <div class="col-md-12">
             <form id="form">
-                <label for="user-input">Enter a Star Wars Related Term and Use the FORCE!</label><br>
+                <label for="user-input">Enter a Harry Potter Related Term and Watch the Magic!</label><br>
                 <input type="text" id="user-input">
                 <input id="submitPress" type="submit" value="Submit" class="btn btn-default">
             </form>
@@ -38,5 +43,6 @@
 
 </div>    
 <!-- Link to JS -->
-<script src="assets/js.js"></script>
+<script src="assets/js/giftastic.js"></script>
 </body>
+</html>
