--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Giphy API || Marie Dagan</title>
+	<title>Giftastic || James Ngo</title>
   <!-- Reset CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
   <!-- Latest compiled and minified CSS -->
@@ -13,8 +13,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <!-- Link to CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <!-- Link to Google Font -->
-<link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 
 <body>
 
